structure changes and admin cruds

--- a/ExamTask.MVC/Views/_ViewImports.cshtml
+++ b/ExamTask.MVC/Views/_ViewImports.cshtml
@@ -1,5 +1,3 @@
 ﻿@using ExamTask.Business.DTOs.AuthDTOs;
-@using ExamTask.Core.Enums;@* 
-@using ExamTask.Business.Services;
-@using ExamTask.Core.Entities; *@
+@using ExamTask.Core.Enums;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
