--- a/ExamTask.MVC/Views/Shared/_Layout.cshtml
+++ b/ExamTask.MVC/Views/Shared/_Layout.cshtml
@@ -53,7 +53,7 @@
             </div>
             @if (User.Identity.IsAuthenticated)
             {
-                <a href="" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Profile<i class="fa ms-3"></i></a>
+                <a asp-action="Index" asp-controller="Profile" class="btn btn-primary py-4 px-lg-5 d-none d-lg-block">Profile<i class="fa ms-3"></i></a>
                 <a asp-controller="Auth" asp-action="Logout" class="btn btn-danger py-4 px-lg-5 d-none d-lg-block">Sign Out<i class="fa ms-3"></i></a>
             } else
             {
