Teacher and Students profile views

--- a/ExamTask.MVC/Areas/Profile/Views/AdminUser/Index.cshtml
+++ b/ExamTask.MVC/Areas/Profile/Views/AdminUser/Index.cshtml
@@ -22,7 +22,7 @@
                                 <th>Username</th>
                                 <th>Name</th>
                                 <th>Surname</th>
-                                <th colspan="1" style="text-align:center">Action</th>
+                                <th>Action</th>
                             </tr>
                         </thead>
                         <tbody>
