--- a/ExamTask.MVC/Areas/Profile/Views/AdminUser/UpdateStudent.cshtml
+++ b/ExamTask.MVC/Areas/Profile/Views/AdminUser/UpdateStudent.cshtml
@@ -37,7 +37,7 @@
                     <span asp-validation-for="ClassNumber" class="text-danger"></span>
                 </div>
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-success">Submit</button>
             </form>
         </div>
     </div>
