--- a/ExamTask.MVC/Areas/Profile/Views/AdminUser/UpdateTeacher.cshtml
+++ b/ExamTask.MVC/Areas/Profile/Views/AdminUser/UpdateTeacher.cshtml
@@ -32,7 +32,7 @@
                     <span asp-validation-for="Password" class="text-danger"></span>
                 </div>
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-success">Submit</button>
             </form>
         </div>
     </div>
